[metadata]
name = parampacmap
version = 0.1.0
author = Haiyang Huang
author_email = hyhuang@cs.duke.edu
url = https://github.com/hyhuang00/ParamRepulsor
project_urls =
    Bug Tracker = https://github.com/hyhuang00/ParamRepulsor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Intended Audience :: Developers

[options]
package_dir =
    = source
packages = find:
python_requires = >=3.8
install_requires =
    scikit-learn >= 0.20
    annoy >= 1.17
    numpy >= 1.20

[options.packages.find]
where = source
